track upstream Humainary 3.3.0 — ordering is processing order, decided by who submitted
Upstream does not tag; 3.3.0 is the squashed commit on each main (specs 07f2740,
substrates bc3e611, serventis c21d4bd), fetched by SHA in the publish workflow.
The Java API did not move. The specification did: §5.3 classes queued work by
the submitting context — cross-circuit work is ingress to the receiver, an
in-callback subscribe/close/cleanup is transit, and transit is FIFO over every
kind of operation it carries; §7.6.1 defines a subscription's visibility window
in the circuit's logical processing order, with selection distinct from
execution — a close ends future selection and never retracts a dispatched
delivery; §9.1's drop rule is positioned in that same order.

The kit grew 974 -> 1067 with twelve new contract classes and this provider
failed seven, every one an inline shortcut standing in for a queued operation:

- FsRegistrar unwraps only pipes owned by its channel's circuit; a pipe of
  another circuit is delivered through its own emit, so it is admitted to that
  circuit and runs in that circuit's context (§5.3), and a closed destination
  drops it (§9.1).
- A channel's delivery to a registered pipe is a transit hop queued behind
  transit already accepted, never an inline call (§5.3, §7.6.1); receptors still
  run inline in the channel's walk. Measured cost: about +10 ns per
  registered-pipe delivery (ChannelOps.piped_emit_batch 13.05 -> 23.5 ns,
  controls flat); the hop is mandated, its magnitude is being profiled.
- Rebuild bookkeeping is keyed per (channel, subscription), so a fresh
  subscription after a close rediscovers every channel (§7.5).

And one gap the kit does not reach, found by reading: the conduit's add job
installs a subscription only if its retire job has not already executed
(isRetired, worker-set) — not isClosed, which the caller sets and which would
lose X in subscribe(); emit(X); close(); emit(Y). SubscriptionCloseBeforeAddTest.

Substrates