@@ -6,8 +6,8 @@ are](#what-the-local-tests-are-and-are-not).
 
 | Suite | Result |
 |---|---|
-| [`substrates-api-java-tck`](https://github.com/humainary-io/substrates-api-java-tck) 3.1.2 | **992 run · 0 failures · 0 errors** |
-| [`serventis-api-java-tck`](https://github.com/humainary-io/serventis-api-java-tck) 3.1.2 | **1227 run · 0 failures · 0 errors** |
+| [`substrates-api-java-tck`](https://github.com/humainary-io/substrates-api-java-tck) 3.3.0 | **1067 run · 0 failures · 0 errors** |
+| [`serventis-api-java-tck`](https://github.com/humainary-io/serventis-api-java-tck) 3.3.0 | **1227 run · 0 failures · 0 errors** |
 
 ```bash
 ./scripts/tck.sh                              # both
@@ -16,6 +16,137 @@ are](#what-the-local-tests-are-and-are-not).
 
 The TCK resolves the provider from the local Maven repository, so **an edit that has not been
 installed is not under test**. `scripts/tck.sh` installs first for that reason.
+
+---
+
+## The 3.3.0 conformance run
+
+| | |
+|---|---|
+| **Date** | 2026-09-22 |
+| **Provider** | `io.fullerstack:fullerstack-substrates:3.0.0-SNAPSHOT`, built against Substrates/Serventis **3.3.0** |
+| **Substrates TCK** | `substrates-api-java-tck` at **3.3.0** (upstream `main` commit, tagged 3.3.0 locally — upstream does not tag) — **1067 run · 0 failures · 0 errors** (992 at 3.1.2; 75 tests added in 12 new contract classes) |
+| **Serventis TCK** | `serventis-api-java-tck` at **3.3.0** — **1227 run · 0 failures · 0 errors** (unchanged) |
+| **Local suite** | `mvn -o -nsu clean test` — **33 run · 0 failures · 0 errors** (29 + 4 in `CallbackTopologyTerminalTest`, 2026-09-22) |
+| **Source changes** | `FsRegistrar` (a registered pipe is submitted, not invoked); `FsHub`, `FsSubscription`, `FsConduit`, `FsChannel` (rebuild memo keyed by subscription). Nothing on the worker loop or the emit path moved. |
+| **Baseline before the changes** | 1067 run · **7 failures** — `ConnectedShutdown` (1), `CrossCircuit` (2), `Rebuild` (1), `StemTopology` (1), `Subscriber` (2) |
+
+**What 3.1.2 → 3.3.0 changed.** The Java API surface did not change (only `@SpecDoc` URLs). The
+spec did, in one place that this provider had read the old way: **§5.3** now classifies queued work
+by the *context it was submitted from* — work from another circuit's context is ingress to the
+receiver; a subscribe, close or cleanup submitted from inside a callback is transit — and "transit
+is FIFO over every kind of operation it carries, not over emissions alone". **§7.6.1** defines a
+subscription's visibility window in the circuit's *logical processing order* (transit ahead of
+ingress, FIFO within each), not in admission position; selection and execution are distinct — a
+close ends future selection and never retracts a delivery already dispatched. **§9.1**'s
+post-close drop is positioned in that same order. The kit's twelve new classes (`CrossCircuit`,
+`CrossCircuitIngress`, `CrossConduit`, `ConnectedShutdown`, `Rebuild`, `Provenance`,
+`FailureContinuation`, `CoordinationStage`, `StimulusTime`, `StemTopology`, `CallbackTopology`,
+`Network`) observe exactly those sentences, and its README gained a table of assertions a
+conformance test *may not* make.
+
+**Fix 1 — a registered pipe is submitted to its own circuit, never invoked in the walk
+(§5.3, §6.1, §14; closes 6 of the 7).** `FsRegistrar.register(Pipe)` used to unwrap an `FsPipe` to
+its bare receiver and store that in the channel's dispatch array, so the delivery ran inline on the
+*emitting* worker in the middle of the dispatch walk. That was the "known gap" recorded below at
+3.1.2, and 3.3.0 makes it observable three ways: a same-circuit registered pipe's delivery ran
+*ahead* of transit the same cascade had already accepted (`SubscriberContractTest
+.dispatch_registeredPipe_sequencesBehindAcceptedTransitWork`, `…StateHolderPipes…` — §5.3 "sequenced
+behind transit work already accepted … FIFO over every kind of operation"); a pipe owned by another
+circuit ran on the wrong worker and saw the wrong `Current` (`CrossCircuitContractTest` ×2,
+`StemTopologyContractTest` — §5.3 "work submitted from another circuit's context … is ingress work
+to it", §5.1 confinement); and an emission into a pipe whose circuit had closed was still delivered
+(`ConnectedShutdownContractTest` — §9.1 "MUST be silently dropped"). The registrar now stores one
+`FsRegistrar.Admit` per registered pipe, whose `accept` is `circuit.submit(receiver, value)` —
+`FsCircuit.submit` being the one §5.3 routing decision the provider already had, and the one that
+carries the §9.1 drop. A registered **receptor** is still invoked in the walk: §6.3 and §16.3 let a
+provider store it directly, and it has no circuit to submit to. Consequence stated so nobody reads it
+as a bug: a receptor and a pipe registered on one channel no longer have a total invocation order
+between them (the receptor runs in the walk, the pipe one transit hop later); the kit README lists
+that as an assertion a test may not make, and §7.4 leaves mixed-kind ordering to the projection.
+
+**Fix 2 — the rebuild memo is keyed by subscription, not subscriber (§7.3, §7.5; closes the 7th).**
+`FsHub`'s roster and `FsChannel.rebuild`'s "already rebuilt for this pair" memo were keyed by
+`FsSubscriber`. Closing a subscription and resubscribing the same subscriber with no emission in
+between left the memo untouched, so the new subscription never ran its callback and inherited the
+old subscription's receptors (`RebuildContractTest.resubscribe_afterSubscriptionClose_startsFreshPerPair`).
+§7.3 says the callback runs "exactly once for that subscription/channel pair" and §7.5 that "each
+subscribe operation creates an independent subscription instance", so the pair's key is the
+subscription: `FsSubscription` now carries its subscriber, the hub's add/remove jobs carry the
+subscription, and the memo is keyed by it. The same change removes a latent double-delivery when one
+subscriber was subscribed twice to one conduit (one callback for two pairs, shared receptors); no kit
+test pins that, the text does.
+
+**Post-close policy (§9.1 / §9.3 step 1 require it to be documented).** A circuit's `close()`
+enqueues the close marker first and then sets `closed`. Work admitted *before* the marker is still
+drained by the worker; an emission admitted from a caller context *after* `closed` is set is dropped
+at admission, silently, with no side-channel report. A cascade submission raised on the worker while
+`closed` is already set — including, since 3.3.0, a registered pipe's delivery — is also dropped, even
+when the ingress item it descends from was admitted before the marker: pre-close work drains, but
+its cascades are not guaranteed to complete once close has been accepted. Queued `close`/cleanup jobs
+never throw synchronously. A `Fault` is raised synchronously only by operations that must return a
+new resource or a snapshot (§9.1's "open-required" class).
+
+**A third change, for a gap the kit does not reach (found by reading §7.6.1 against the add job).**
+The conduit's subscribe job installed a subscription unless the *conduit* was closed. §7.6.1 puts a
+subscription's window between the point its registration job *executes* and the point its close job
+executes, in processing order. A close raised on the worker is transit and can execute before the
+caller's add job (ingress): the retire ran against an empty roster, and the add then installed a
+subscription whose close had already run — it received every later emission and could never be
+retired, retire being idempotent. The add job now asks whether the *retire job has executed*
+(`FsSubscription.isRetired`, set on the worker by the unsubscribe job) — not whether close was
+accepted (`isClosed`, set on the caller), because `subscribe(); emit(X); close(); emit(Y)` from one
+caller has the add job execute ahead of the retire job and `X` must be delivered; keying on `isClosed`
+lost `X` and failed two kit tests. `SubscriptionCloseBeforeAddTest` reproduces the ordering with a
+receptor that closes the second subscription from inside the first emission's cascade.
+
+**Cost, measured (perfkit 3.3.0, `-XX:+UseCompactObjectHeaders`, same machine, provider
+installed and the perfkit jar rebuilt before each run).** Fix 2 is cold (subscribe/close jobs and
+rebuild only). Fix 1 puts **one transit hop on every same-circuit registered-pipe delivery** and turns
+a foreign registered-pipe delivery into the ordinary cross-circuit admission it always should have
+been. The hop costs what the suite's own transit unit costs — `TransitOps.transit_fanout_1k_batch`,
+13.2 ± 0.9 ns/op, unchanged — not the +3–6 ns the design guessed:
+
+| row (`-f 2 -wi 3 -i 5 -r 1s`, ns/op) | before | after | delta |
+|---|---|---|---|
+| `ChannelOps.piped_emit_batch` (one registered `circuit.pipe`) | 13.05 ± 2.7 | 25.03 ± 2.8 | **+12.0** |
+| `ChannelOps.piped_emit_admission_batch` (admission only) | 10.30 ± 1.2 | 9.74 ± 2.6 | flat |
+| `ChannelOps.observed_emit_batch` / `unobserved_emit_batch` (receptor / none) | 10.4–11.5 | 10.8–11.3 | flat |
+| `CyclicOps.cyclic_emit_registrar` (pool-backed subscriber, one hop per cycle) | 13.99 ± 0.9 | 31.0 ± 10.0 | +17 |
+| `TransitOps.transit_fanout_1k_batch` (the hop unit) | 13.4 ± 10 (f1) | 13.2 ± 0.9 | flat |
+
+Single-fork (`-f 1 -wi 3 -i 3`) sweep of 47 rows: every `PipeOps.*`, `CrossCircuitOps.*`,
+`StemOps.baseline_*`/`stem_*` row flat within its error; `StemOps.subscriber_emit_batch` +3 / +34 /
++40 / +122 ns at depth 1 / 3 / 5 / 10 (one registered conduit pipe per ancestor level, so one hop
+per level); `MirrorOps.mirror_emit_identity/string` +21 / +27 (pool-backed subscriber, one hop plus
+the mirror channel's own dispatch now on the transit side); `CyclicOps.cyclic_emit_*_100k` +11–14.
+Why a hop is ≈13 ns and not 3–6 is **not profiled** and is stated as a hypothesis only: the delivery
+now crosses `TransitQueue.drain`'s megamorphic `r.accept(v)` site, which cannot inline the receptor
+that the channel's single-registration `dispatch` site could, plus `Admit.accept → submit` (volatile
+`closed` read, `Thread.currentThread()` compare) and the drain's per-item try/catch and cursor
+bookkeeping. If that row matters, the next step is `-prof perfasm` on `piped_emit_batch`, not a
+change. Serventis rows and the provider's own tests register receptors only and are unaffected.
+
+**Composed terminals (closed 2026-09-22, repair round 1).** `FsFiber.pipe`/`FsFlow.pipe` terminals used to submit
+`channel.cascadeDispatch` — the dispatch consumer assembled at the channel's last rebuild — straight to transit, skipping
+the version check "because subscriber state cannot change mid-cascade". 3.3.0 §7.6.1 selects recipients as "exactly
+those subscriptions effective at that position", the position at which the channel processes the emission, and says a
+subscribe or close raised inside a cascade "takes effect within the current cascade" (§5.3, §7.6.1 consequence 3, §7.6.2
+"including when the subscription change was raised from within a cascade"). The kit does not reach this path
+(`CallbackTopologyContractTest` emits through the plain channel pipe); a probe did: callback
+`conduit.subscribe(S2); viaFiber.emit("E")` gave S2 `[F]` where the plain path gave `[E, F]`. A version check in the
+terminal itself cannot fix it — the change may still be ahead of the delivery in transit — so the terminal now submits the
+channel (`target.emit(v)` in substance) and `FsChannel.receive` checks at the position of delivery; `cascadeDispatch`,
+`stemCascade` and `cascade()` are gone. Hop count unchanged. Pinned by the provider's own
+`CallbackTopologyTerminalTest` (fiber and flow × subscribe-then-emit, close-then-emit inside one callback; 4 tests). No
+perfkit row ends a fiber/flow at a conduit pipe (every `sink` there is `circuit.pipe(...)`), so the branch was priced with a
+scratch JMH row at the perfkit's VM options (`-XX:+UseCompactObjectHeaders`), paired against the pre-change jar,
+`-f 3 -wi 3 -i 5 -r 1s`: `fiber.guard.pipe(conduit.get(n))` **41.9 ± 3.7 → 45.0 ± 5.7 ns/op (+3.1)**,
+`flow.map.pipe(conduit.get(n))` **41.1 ± 5.6 → 43.7 ± 4.9 (+2.7)**; the untouched `fiber.pipe(circuit.pipe(r))` control
+41.7 → 45.5 ± 10.7 and the plain `channel.emit` control 14.9 → 15.6 — the move is at the edge of the predicted +1–3 ns
+(one same-class call level, ~6 loads, three branches in `receive`) and inside the run's own noise. The mandated
+`ChannelOps|CrossCircuitOps|PipeOps` rows (26, `-f 1 -wi 3 -i 3`) are all flat within error, as predicted: they never enter
+the branch.
 
 ---
 
@@ -126,7 +257,7 @@ contract tests asserting that `@NotNull`, `@Idempotent`, `@Identity`, `@New`, `@
 
 ## What the local tests are, and are not
 
-`src/test/java` holds 29 tests across 5 classes. None asserts a spec requirement, and none is a substitute
+`src/test/java` holds 33 tests across 6 classes. None asserts a spec requirement, and none is a substitute
 for the TCK. Every one exists because a **defect was found that the TCK passes straight through**,
 and each is held to a rule the deleted suite was not:
 
@@ -181,10 +312,11 @@ MUST. Upstream should say "the most-recently-written entry".
 
 Real, deliberate, and stated so they are not mistaken for conformance.
 
-**`FsRegistrar.register(Pipe)` unwraps `FsPipe.receiver()` and invokes it directly**, bypassing
-`Pipe.emit` and its routing decision. For a same-circuit target that is the intended fast path; for
-a pipe owned by a *different* circuit it runs that circuit's receiver on the wrong worker. The
-registrar does not know its owning circuit, so this is not a one-line fix.
+*(Closed at 3.3.0.)* **`FsRegistrar.register(Pipe)` unwrapped `FsPipe.receiver()` and invoked it
+directly**, bypassing `Pipe.emit` and its routing decision — a foreign pipe's receiver ran on the
+wrong worker, and a same-circuit one ran ahead of accepted transit. The earlier note that "the
+registrar does not know its owning circuit, so this is not a one-line fix" was a misdiagnosis: the
+*pipe* knows its circuit, and the fix was the one line described under the 3.3.0 run.
 
 **§5.8's stimulus holder is reached ambiently.** Operators reach `FsOperators.Wrap.wrap(Consumer)`
 with no circuit reference, so the per-chain reading arrives through a `ThreadLocal` bound by the
